# you-fast-api

./: .gitignore  main.py  pyproject.toml
db/: db_setup.py
